Готовая база для тестов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="test">Тестове питання?</string>
     <string name="next">Наступне</string>
     <string name="bred">Це відповідь на тестове питання. Олололололололололололололололололололололололлоллллллллллоооооооооооооооооооооооооллллллллл</string>
+    <string name="card_header">Назва предмету</string>
 </resources>
