--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LearnThingAndroid</string>
+    <string name="app_name">Methodic</string>
     <string name="action_settings">Settings</string>
     <string name="test">Тестове питання?</string>
     <string name="next">Наступне</string>
@@ -8,4 +8,9 @@
     <string name="status">Статус виконання:</string>
     <string name="process">В процесі</string>
     <string name="remind">Нагадувати про предмет</string>
+    <string name="img_attr">imageAttr</string>
+    <string name="methodic">Методика:</string>
+    <string name="hello">Вітаємо!</string>
+    <string name="write_the_name">Введіть своє ім’я</string>
+    <string name="start">Почати</string>
 </resources>
