--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
     <string name="add_note">Додати</string>
     <string name="write_name_note">Введіть ім’я нотатки</string>
     <string name="write_text_note">Напишіть нотатку</string>
+    <string name="write_name_subject">Напишіть назву предмета</string>
+    <string name="write_motivation">Напишіть свою мотивацію</string>
+    <string name="choose_picture">Зображення:</string>
+    <string name="dali">Готово</string>
+
 
     <array name="status_array">
         <item>
