Personal_layout  + кнопочки все работают  + про прило + помощь

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,13 @@
     <string name="about">Про додаток</string>
     <string name="newpunkt">Новий</string>
 
+    <string name="help_description">1) При запуску додатку ви бачите головне вікно,
+        на якому розташований основний функціонал, а саме: перегляд предметів,
+        методик, нотаток, допомога, а також статистика \n2) Щоб додати новий предмет - необхідно перейти до вікна Методики та натиснути +
+    \n3) Створюйте нові нотатки в предметі та переглядайте їх у головному вікні або вікні предмету\nПриємного користування!</string>
+
+    <string name="about_description">Даний додаток призначений для візуалізації методів які призначені для полегшення процесу навчання.</string>
+
     <array name="status_array">
         <item>
             В процесі
