--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="notes">Нотатки</string>
     <string name="help">Допомога</string>
     <string name="about">Про додаток</string>
-    <string name="newpunkt">Новий</string>
+    <string name="newpunkt">Вихід</string>
 
     <string name="help_description">1) При запуску додатку ви бачите головне вікно,
         на якому розташований основний функціонал, а саме: перегляд предметів,
